# SyncNexus-Backend

./: .gitignore  README.md  README2.md  pyproject.toml
deploy/: .bumpversion.cfg  Dockerfile  deploy.sh  local_test.sh
deploy/flyway/: flyway.toml
deploy/flyway/migrations/: V1.1__create_user_table_table.sql  V1.2__create_jobs_table.sql  V1.3__create_employee_mapping_table.sql  V1.4__create_ratings_table.sql  V1.5__create_task_table.sql  V1.6__create_session_table.sql  V1.7__create_location_table.sql  V2.1__create_rating_view.sql  V2.2__update_rating_view.sql  V2.3__update_employee_mapping_table.sql  V2.4__create_payment_table.sql  V2.5__create_feedback_table.sql  V2.6__update_tables.sql  V2.7__enable_extensions.sql  V2.8__create_payment_view.sql  V2.9__remove_constraint.sql
migrations/: V1.1__create_user_table.sql  V1.1__create_user_table_table.sql  V1.2__create_jobs.sql  V1.2__create_jobs_table.sql  V1.3__create_employee_mapping.sql  V1.3__create_employee_mapping_table.sql  V1.4__create_ratings_table.sql  V1.5__create_task_table.sql  V1.6__create_session_table.sql  V1.7__create_location_table.sql  V1__create_user_table.sql
src/: main.py
src/auth/: base.py  relation.py  user_auth.py
src/client/: cockroach.py  fastapi.py  firebase.py
src/db/: base.py  employee_location.py  ratings.py  task.py  user.py
src/responses/: employee.py  job.py  task.py  time.py  user.py  util.py
src/routers/: employee.py  employer.py  user.py
src/services/: employee.py  employer.py  user.py
src/utils/: client.py  enums.py  time.py
tests/: conftest.py
(+7 files in other folders)
