[tool.poetry]
name = "google-solution-challenge"
version = "0.2.0-dev12"
description = ""
authors = ["ATISHAY JAIN <atishayj.frb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
firebase-admin = "^6.3.0"
pydantic = "^2.5.3"
uvicorn = "^0.25.0"
sqlalchemy = "^2.0.25"
pytz = "^2023.3.post1"
httpx = "^0.26.0"
psycopg2-binary = "^2.9.9"
pg8000 = "^1.30.4"



[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
isort = "^5.13.2"
black = "^23.12.1"
bumpversion = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
